--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  firebase_core: ^3.12.1
+
   provider: ^6.1.4
   iconsax: ^0.0.8
   cloud_firestore: ^5.6.5
+
+  firebase_core: ^3.13.0
+  firebase_auth: ^5.5.2
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
