--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,13 +36,24 @@ dependencies:
   cupertino_icons: ^1.0.8
 
   provider: ^6.1.4
+
   iconsax: ^0.0.8
   cloud_firestore: ^5.6.5
+  googleapis_auth: ^1.4.0
   image_picker: ^1.0.4
-  http: ^0.13.5
+  http: 1.3.0
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.2
   shared_preferences: ^2.2.2
+  intl: ^0.18.1
+  uuid: ^3.0.7
+  device_info_plus: ^9.0.3
+  platform: ^3.1.0
+  collection: ^1.17.2
+  firebase_messaging: 15.2.5
+  path_provider: ^2.0.11
+  flutter_local_notifications: ^19.1.0
+  image: ^4.0.17
   sqflite: ^2.4.2
   path: ^1.9.1
 
