--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,8 @@ dependencies:
   provider: ^6.1.4
   iconsax: ^0.0.8
   cloud_firestore: ^5.6.5
-
+  image_picker: ^1.0.4
+  http: ^0.13.5
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.2
   shared_preferences: ^2.2.2
